--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -224,11 +224,16 @@ p {
 }
 
 @media screen and (min-width: 390px) and (max-width: 1024px) {
+  .contact-me, h6 {
+    display: none;
+  }
+  
   .me-container {
     transform: translateY(-310px);
     margin: 0 auto;
     display: flex;
     flex-direction: column;
+     transform:translateY(-250px);
   }
 
   .header-text {
@@ -266,6 +271,7 @@ p {
   .paragraph-home {
     padding: 0 20px;
     margin-bottom: -1000px;
+    margin-top: 20px;
   }
   .learn-more {
     display: none;
