--- a/client/src/pages/interests.css
+++ b/client/src/pages/interests.css
@@ -1,7 +1,3 @@
-body {
-  margin: 0;
-}
-
 
 body {
   overflow-x: hidden;
@@ -133,7 +129,7 @@ span {
   }
   .language2 {
     transform: translateY(-30px);
-    margin-left: 45px;
+    margin-left: 60px;
   }
   span {
     display: none;
@@ -143,5 +139,23 @@ span {
     transform: translateX(-625px);
     width: 300%;
     margin-top: 100px;
+    margin-left: 20px;
   }
+.card-container,
+.card-container2 {
+  width: 190px;
+  height: 390px;
+  margin-right: -70px;
+}
+.card-container2 {
+  transform: translateX(205px);
+}
+  .flip-card-front {
+  width: 60%;
+  height: 60%;
+}  
+.language {
+  margin-right: 20px;
+}
+
 }
