--- a/client/src/pages/testimonial.css
+++ b/client/src/pages/testimonial.css
@@ -33,7 +33,7 @@ body {
 }
 
 .blob {
-  position: absolute;
+  position:absolute;
   top: 30px;
   left: 420px;
   width: 20%;
@@ -97,8 +97,19 @@ body {
 }
 
 @media screen and (min-width: 390px) and (max-width: 1024px) {
+  .blob {
+   position:absolute;
+  top: 5px;
+  left: 105px;
+  width: 40%;
+  height: 19%;
+  border-radius:70% 30% 71% 29% / 41% 74% 26% 59%;
+  animation: morph 6s ease-in-out infinite;
+  background-color: #13cdcd;
+  z-index: -1;
+  }
   .quote {
-    color: black;
+    color:#b5e6ec;
     width: 70%;
     text-align: left;
     margin: 0 auto;
@@ -114,7 +125,7 @@ body {
     margin-bottom: 20px;
   }
   .from,
-  .quotes {
-    margin-right: 60px;
+  .quotes,.name {
+    margin-right: 80px;
   }
 }
